civo-k3s/jenkins/longhorn-service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: longhorn-ui
  name: longhorn-frontend
  namespace: longhorn-system
spec:
  selector:
    app: longhorn-ui
  ports:
  - port: 8000
    targetPort: 8000
  type: LoadBalancer
