civo-k3s/jenkins/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
spec:
  rules:
  - host: jenkins.f1a56871-b825-4015-9371-ed4fc9d21b9e.k8s.civo.com
    http:
      paths:
      - backend:
          serviceName: jenkins-frontend
          servicePort: 8080
